// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<Tag /> Sizes large 1`] = `
.c0 {
  border-radius: 8px;
  box-sizing: border-box;
  display: inline-block;
  margin-right: 8px;
  padding: 4px 12px;
  background-color: #f2f2f2;
  color: #4c4c4c;
  font-size: 18px;
}

<div
  className="c0"
  size="large"
>
  <div
    className=""
  >
    Tag text
  </div>
</div>
`;

exports[`<Tag /> Sizes medium 1`] = `
.c0 {
  border-radius: 8px;
  box-sizing: border-box;
  display: inline-block;
  margin-right: 8px;
  padding: 4px 12px;
  background-color: #f2f2f2;
  color: #4c4c4c;
}

<div
  className="c0"
  size="medium"
>
  <div
    className=""
  >
    Tag text
  </div>
</div>
`;

exports[`<Tag /> Sizes small 1`] = `
.c0 {
  border-radius: 8px;
  box-sizing: border-box;
  display: inline-block;
  margin-right: 8px;
  padding: 4px 12px;
  background-color: #f2f2f2;
  color: #4c4c4c;
  font-size: 12px;
  padding-top: 4px;
  padding-bottom: 4px;
}

<div
  className="c0"
  size="small"
>
  <div
    className=""
  >
    Tag text
  </div>
</div>
`;

exports[`<Tag /> Skins error 1`] = `
.c0 {
  border-radius: 8px;
  box-sizing: border-box;
  display: inline-block;
  margin-right: 8px;
  padding: 4px 12px;
  background-color: #ffe5e9;
  color: #ac001a;
}

<div
  className="c0"
  size="medium"
>
  <div
    className=""
  >
    Tag text
  </div>
</div>
`;

exports[`<Tag /> Skins neutral 1`] = `
.c0 {
  border-radius: 8px;
  box-sizing: border-box;
  display: inline-block;
  margin-right: 8px;
  padding: 4px 12px;
  background-color: #f2f2f2;
  color: #4c4c4c;
}

<div
  className="c0"
  size="medium"
>
  <div
    className=""
  >
    Tag text
  </div>
</div>
`;

exports[`<Tag /> Skins primary 1`] = `
.c0 {
  border-radius: 8px;
  box-sizing: border-box;
  display: inline-block;
  margin-right: 8px;
  padding: 4px 12px;
  background-color: #e5edfc;
  color: #1355d0;
}

<div
  className="c0"
  size="medium"
>
  <div
    className=""
  >
    Tag text
  </div>
</div>
`;

exports[`<Tag /> Skins success 1`] = `
.c0 {
  border-radius: 8px;
  box-sizing: border-box;
  display: inline-block;
  margin-right: 8px;
  padding: 4px 12px;
  background-color: #edfadf;
  color: #3c6510;
}

<div
  className="c0"
  size="medium"
>
  <div
    className=""
  >
    Tag text
  </div>
</div>
`;

exports[`<Tag /> Skins warning 1`] = `
.c0 {
  border-radius: 8px;
  box-sizing: border-box;
  display: inline-block;
  margin-right: 8px;
  padding: 4px 12px;
  background-color: #ffefd6;
  color: #a36300;
}

<div
  className="c0"
  size="medium"
>
  <div
    className=""
  >
    Tag text
  </div>
</div>
`;

exports[`<Tag /> onClose Prop is rendering well 1`] = `
.c0 {
  border-radius: 8px;
  box-sizing: border-box;
  display: inline-block;
  margin-right: 8px;
  padding: 4px 12px;
  background-color: #f2f2f2;
  color: #4c4c4c;
}

.c1 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
}

.c2 {
  background: none;
  border: none;
  cursor: pointer;
  height: 18px;
  padding: 0;
  margin-left: 4px;
}

.c2 .c3 {
  font-size: 18px;
  color: #4c4c4c;
}

<div
  className="c0"
  size="medium"
>
  <div
    className="c1"
    onClose={[Function]}
  >
    Tag text
    <button
      className="c2"
      onClick={[Function]}
      size="medium"
    >
      <span
        aria-hidden="true"
        className="material-icons MuiIcon-root-1 c3 "
        style={
          Object {
            "color": "",
          }
        }
      >
        close
      </span>
    </button>
  </div>
</div>
`;

exports[`<Tag /> onClose Prop is rendering well 2`] = `
.c0 {
  border-radius: 8px;
  box-sizing: border-box;
  display: inline-block;
  margin-right: 8px;
  padding: 4px 12px;
  background-color: #e5edfc;
  color: #1355d0;
}

.c1 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
}

.c4 .c3 {
  font-size: 18px;
  color: #4c4c4c;
}

.c2 {
  background: none;
  border: none;
  cursor: pointer;
  height: 18px;
  padding: 0;
  margin-left: 4px;
}

.c2 .c3 {
  font-size: 18px;
  color: #1355d0;
}

<div
  className="c0"
  size="medium"
>
  <div
    className="c1"
    onClose={[Function]}
  >
    Tag text
    <button
      className="c2"
      onClick={[Function]}
      size="medium"
    >
      <span
        aria-hidden="true"
        className="material-icons MuiIcon-root-1 c3 "
        style={
          Object {
            "color": "",
          }
        }
      >
        close
      </span>
    </button>
  </div>
</div>
`;

exports[`<Tag /> onClose Prop is rendering well 3`] = `
.c0 {
  border-radius: 8px;
  box-sizing: border-box;
  display: inline-block;
  margin-right: 8px;
  padding: 4px 12px;
  background-color: #edfadf;
  color: #3c6510;
}

.c1 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
}

.c4 .c3 {
  font-size: 18px;
  color: #4c4c4c;
}

.c5 .c3 {
  font-size: 18px;
  color: #1355d0;
}

.c2 {
  background: none;
  border: none;
  cursor: pointer;
  height: 18px;
  padding: 0;
  margin-left: 4px;
}

.c2 .c3 {
  font-size: 18px;
  color: #3c6510;
}

<div
  className="c0"
  size="medium"
>
  <div
    className="c1"
    onClose={[Function]}
  >
    Tag text
    <button
      className="c2"
      onClick={[Function]}
      size="medium"
    >
      <span
        aria-hidden="true"
        className="material-icons MuiIcon-root-1 c3 "
        style={
          Object {
            "color": "",
          }
        }
      >
        close
      </span>
    </button>
  </div>
</div>
`;

exports[`<Tag /> onClose Prop is rendering well 4`] = `
.c0 {
  border-radius: 8px;
  box-sizing: border-box;
  display: inline-block;
  margin-right: 8px;
  padding: 4px 12px;
  background-color: #ffefd6;
  color: #a36300;
}

.c1 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
}

.c4 .c3 {
  font-size: 18px;
  color: #4c4c4c;
}

.c5 .c3 {
  font-size: 18px;
  color: #1355d0;
}

.c6 .c3 {
  font-size: 18px;
  color: #3c6510;
}

.c2 {
  background: none;
  border: none;
  cursor: pointer;
  height: 18px;
  padding: 0;
  margin-left: 4px;
}

.c2 .c3 {
  font-size: 18px;
  color: #a36300;
}

<div
  className="c0"
  size="medium"
>
  <div
    className="c1"
    onClose={[Function]}
  >
    Tag text
    <button
      className="c2"
      onClick={[Function]}
      size="medium"
    >
      <span
        aria-hidden="true"
        className="material-icons MuiIcon-root-1 c3 "
        style={
          Object {
            "color": "",
          }
        }
      >
        close
      </span>
    </button>
  </div>
</div>
`;

exports[`<Tag /> onClose Prop is rendering well 5`] = `
.c0 {
  border-radius: 8px;
  box-sizing: border-box;
  display: inline-block;
  margin-right: 8px;
  padding: 4px 12px;
  background-color: #ffe5e9;
  color: #ac001a;
}

.c1 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
}

.c4 .c3 {
  font-size: 18px;
  color: #4c4c4c;
}

.c5 .c3 {
  font-size: 18px;
  color: #1355d0;
}

.c6 .c3 {
  font-size: 18px;
  color: #3c6510;
}

.c7 .c3 {
  font-size: 18px;
  color: #a36300;
}

.c2 {
  background: none;
  border: none;
  cursor: pointer;
  height: 18px;
  padding: 0;
  margin-left: 4px;
}

.c2 .c3 {
  font-size: 18px;
  color: #ac001a;
}

<div
  className="c0"
  size="medium"
>
  <div
    className="c1"
    onClose={[Function]}
  >
    Tag text
    <button
      className="c2"
      onClick={[Function]}
      size="medium"
    >
      <span
        aria-hidden="true"
        className="material-icons MuiIcon-root-1 c3 "
        style={
          Object {
            "color": "",
          }
        }
      >
        close
      </span>
    </button>
  </div>
</div>
`;

exports[`<Tag /> with bold prop 1`] = `
.c0 {
  border-radius: 8px;
  box-sizing: border-box;
  display: inline-block;
  margin-right: 8px;
  padding: 4px 12px;
  font-weight: bold;
  background-color: #f2f2f2;
  color: #4c4c4c;
}

<div
  className="c0"
  size="medium"
>
  <div
    className=""
  >
    Tag text
  </div>
</div>
`;

exports[`<Tag /> with only text prop / children 1`] = `
.c0 {
  border-radius: 8px;
  box-sizing: border-box;
  display: inline-block;
  margin-right: 8px;
  padding: 4px 12px;
  background-color: #f2f2f2;
  color: #4c4c4c;
}

<div
  className="c0"
  size="medium"
>
  <div
    className=""
  >
    example
  </div>
</div>
`;

exports[`<Tag /> with only text prop / children 2`] = `
.c0 {
  border-radius: 8px;
  box-sizing: border-box;
  display: inline-block;
  margin-right: 8px;
  padding: 4px 12px;
  background-color: #f2f2f2;
  color: #4c4c4c;
}

<div
  className="c0"
  size="medium"
>
  <div
    className=""
  >
    example
  </div>
</div>
`;

exports[`<Tag /> without props 1`] = `
.c0 {
  border-radius: 8px;
  box-sizing: border-box;
  display: inline-block;
  margin-right: 8px;
  padding: 4px 12px;
  background-color: #f2f2f2;
  color: #4c4c4c;
}

<div
  className="c0"
  size="medium"
>
  <div
    className=""
  >
    Tag text
  </div>
</div>
`;
